# -------

./: .gitignore  CMakeLists.txt
Data/test02/: C1N10.data  C1N3.data
MyP1/: myFirstClass.hpp
MyP2/: data.date  main  main.cpp  obe_euler.hpp  obe_euler_graph.py
MyP2/main.dSYM/Contents/Resources/DWARF/: main
ODE_03/: BC_solver  BC_solver.cpp  BC_solver.hpp  BC_solver_output.data  C02_N200.data  C02_N200.inv  C02_N200.jac  jacobi.hpp  jacobi_L2NORM  jacobi_L2NORM.cpp  jacobi_output.data
ODE_03/BC_solver.dSYM/Contents/: Info.plist
ODE_2/: IC_solver  IC_solver.cpp  IC_solver.hpp
ODE_2/Data/test02/: C1N100.data  C1N5.data
ODE_2/IC_solver.dSYM/Contents/: Info.plist
ODE_2/IC_solver.dSYM/Contents/Resources/DWARF/: IC_solver
integral/: simpson_rule  simpson_rule.cpp  simpson_rule.hpp  trapezoidal_rule  trapezoidal_rule.cpp  trapezoidal_rule.hpp
integral/simpson_rule.dSYM/Contents/: Info.plist
integral/simpson_rule.dSYM/Contents/Resources/DWARF/: simpson_rule
integral/trapezoidal_rule.dSYM/Contents/: Info.plist
integral/trapezoidal_rule.dSYM/Contents/Resources/DWARF/: trapezoidal_rule
partial_differentiation/: CONV.cpp  LinearAdvection.cpp  LinearAdvection.hpp  advection_equation  linear_advection_output.data
partitial_differentiation/: LinearAdvection
partitial_differentiation/LinearAdvection.dSYM/Contents/: Info.plist
partitial_differentiation/LinearAdvection.dSYM/Contents/Resources/DWARF/: LinearAdvection
partitial_differentiation/advection_equation.dSYM/Contents/: Info.plist
test1/: helloworld  helloworld.cpp  test.md  テスト
(+10 files in other folders)
